add folder stuct

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+fabric/66c682a0-fdf3-49f5-b985-e8bd4dd14a70/SynapseNotebook/82de2f33-bfa0-409f-8a0c-6ddba7f01aed/conf/lighter-config.json
+fabric/66c682a0-fdf3-49f5-b985-e8bd4dd14a70/SynapseNotebook/82de2f33-bfa0-409f-8a0c-6ddba7f01aed/.resource-info
+fabric/66c682a0-fdf3-49f5-b985-e8bd4dd14a70/SynapseNotebook/82de2f33-bfa0-409f-8a0c-6ddba7f01aed/.artifact-info
